Current
Fixed: GITHUB-2172: Suite summary report table issue with EmailableReporter2.java (Devendra Raju K)
Fixed: GITHUB-2148: TestNG - configfailurepolicy=“continue” is not working for retried test (Krishnan Mahadevan)
Fixed: GITHUB-2163: Test is executed infinite number of times when the data provider returns a new object (Krishnan Mahadevan)
Fixed: GITHUB-2157: NullPointerException occurs when a Retried test has an exception in DataProvider (Krishnan Mahadevan)
Fixed: GITHUB-2150: Upgraded jQuery from 1.7.1 to 3.4.1 to resolve reported prototype pollution vulnerability
Fixed: GITHUB-2149: Handle NoClassDefFoundError when classloader fails to load a class
New:   GITHUB-2111: Provide an interceptor for Data Provider (Krishnan Mahadevan)
Fixed: GITHUB-1709: @Ignore doesn't work when used on child class, and parent has multiple @Test methods (Krishnan Mahadevan)
New:   GITHUB-2118: Default assertion message (Jiong Fu)
Fixed: GITHUB-2080: Wrong text for assertTrue (Jiong Fu)
Fixed: GITHUB-2137: Issue with Priority with too low values (Krishnan Mahadevan)
Fixed: GITHUB-2138: Factory calls are not intercepted by IAnnotationTransformer (Krishnan Mahadevan)
Fixed: GITHUB-2078: Xml to Yaml does not capture the dependency definition in generated Yaml File (Jiong Fu)
Fixed: GITHUB-2121: SoftAssert: allow custom message (dr29bart)
Fixed: GITHUB-2110: NPE is thrown when running with Thread affinity (Krishnan Mahadevan)
Fixed: GITHUB-2069: JUnit TestSuite not handled correctly in Reports (Krishnan Mahadevan)
Fixed: GITHUB-2075: Thread interrupt flag persists between test methods (Krishnan Mahadevan)
Fixed: GITHUB-2074: Thread Interrupted when using expectedException (Krishnan Mahadevan)
Fixed: GITHUB-2802: some methods' javadoc in ISuiteListener and ITestListener is misleading (Yehui Wang)
Fixed: GITHUB-2061: java.util.ConcurrentModificationException after registration of SuiteListener at the runtime (Krishnan Mahadevan)