@@ -36,12 +36,7 @@ public class FailurePolicyTest {
         3,
         1
       },
-      new Object[] {
-        new Class[] {ClassWithFailedBeforeClassMethodAndBeforeGroupsAfterClassAfterGroups.class},
-        1,
-        3,
-        1
-      },
+
       new Object[] {new Class[] {ClassWithFailedBeforeMethodAndMultipleInvocations.class}, 4, 0, 4},
       new Object[] {new Class[] {ExtendsClassWithFailedBeforeMethod.class}, 2, 2, 2},
       new Object[] {new Class[] {ExtendsClassWithFailedBeforeClassMethod.class}, 1, 2, 2},
@@ -79,6 +74,24 @@ public class FailurePolicyTest {
     testng.run();
 
     verify(tla, configurationFailures, configurationSkips, skippedTests);
+  }
+
+  @Test
+  public void confFailureTestInvolvingGroups() {
+    Class[] classesUnderTest = new Class[]{
+        ClassWithFailedBeforeClassMethodAndBeforeGroupsAfterClassAfterGroups.class
+    };
+
+    TestListenerAdapter tla = new TestListenerAdapter();
+    TestNG testng = new TestNG();
+    testng.setOutputDirectory(OutputDirectoryPatch.getOutputDirectory());
+    testng.setTestClasses(classesUnderTest);
+    testng.addListener(tla);
+    testng.setVerbose(0);
+    testng.setConfigFailurePolicy(XmlSuite.FailurePolicy.CONTINUE);
+    testng.setGroups("group1");
+    testng.run();
+    verify(tla, 1, 3, 1);
   }
 
   @Test
