@@ -6,7 +6,7 @@ import org.testng.annotations.Test;
 public class A extends Base {
 
   @Test(groups= "a")
-  public void testA() throws Exception {
+  public void testA() {
     s_childAWasRun= true;
   }
 }
